Current development version (1.0-SNAPSHOT)

- Experimental BridJ port with same functionality as JNA-powered version, but smaller and faster (JAR weighs 750 kB instead of 1.8 MB, overhead per-function call about 5x smaller)

Version 1.0-beta-5 (r1067, 20100717)

- Now using a nice configuration dialog when launching ParticlesDemo : has
optional OpenCL settings with "Fastest", "Normal" and "Safest" presets +
detailed platform and device choice (with optional OpenGL sharing choice).
- Added optional context properties map argument to JavaCL.createContext (can be nulled
out)
- Fixed issue #18: CLImage.write calls enqueueImageRead !
- Documented workaround for Linux crashes (issue #20) : http://code.google.com/p/javacl/wiki/TroubleShootingJavaCLOnLinux
- Fixed issue #21: NIOUtils.put() doesn't accept ByteBuffer
- Fixed issue #25: CLEvent.waitFor bug causes segfault
- OpenCL 1.1 support :
	- CLContext.createUserEvent()
	- CLUserEvent.setStatus(int), setCompleted()
	- CLEvent.setCallback(status, callbac), setCompletionCallback(callback)
	- CLBuffer.createSubBuffer(usage, offset, length)
	- CLContext.getDeviceCount()
	- CLDevice.getOpenCLVersion()
	- CLDevice.isHostUnifiedMemory()
	- CLDevice.getNativeVectorWidthXXX() methods
	- CLMem.setDestructorCallback(callback)
	- CLKernel.getPreferredWorkGroupSizeMultiple()
	- CLKernel.enqueueNDRange overload with potentially non-null globalOffsets
	- CLImageFormat.ChannelOrder.Rx, RGx, RGBx
- Faster enums
- Check for cl_amd_fp64 in CLDevice.isDoubleSupported()
- Fixed CLProgram.getBinaries()
- Fixed issue #22 (maven pom issue)

Version 1.0-beta-4 (r760, 20100121)

- Changed semantics of offset & length arguments in typed CLxxxBuffer.read / write / map methods : now expressed in elements, not in bytes (e.g. 4 bytes per element for CLIntBuffer)
- Added OpenGL interoperability methods to CLContext and CLQueue (can create a CLByteBuffer from an OpenGL buffer object, a CLImage2D/3D from an OpenGL 2D/3D texture or a renderbuffer).